--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,6 +1,12 @@
-!!! 5
-%html
-  %head
-    %title Razas de gatos 
-  %body
-    = yield
+!!!
+%head
+  %title Razas de gatos
+  %meta{charset: "utf-8"}
+  %meta{:"http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1"}
+  %meta{name: "description", content: "Razas de gatos"}
+  %link{href: '/application.css', rel: 'stylesheet', type: 'text/css'}
+  %link{href: 'http://necolas.github.com/normalize.css/2.0.1/normalize.css', rel: 'stylesheet', type: 'text/css'}
+  %link{href: '//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css', rel: 'stylesheet', type: 'text/css'}
+  %script{src: '/application.js', type: 'text/javascript'}
+%body
+  = yield
