Use of a nice bootstrap css theme

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,7 +6,7 @@
   %meta{name: "description", content: "Razas de gatos"}
   %link{href: '/application.css', rel: 'stylesheet', type: 'text/css'}
   %link{href: 'http://necolas.github.com/normalize.css/2.0.1/normalize.css', rel: 'stylesheet', type: 'text/css'}
-  %link{href: '//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css', rel: 'stylesheet', type: 'text/css'}
+  %link{href: '//netdna.bootstrapcdn.com/bootswatch/2.3.0/amelia/bootstrap.min.css', rel: 'stylesheet', type: 'text/css'}
   %script{src: '/application.js', type: 'text/javascript'}
 %body
   = yield
